[gd_scene load_steps=3 format=3 uid="uid://1mmj1snrpi8q"]

[ext_resource type="Script" path="res://Scripts/Wfam/edit_box.gd" id="1_3u8od"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_al27v"]
bg_color = Color(0.0470588, 0.0431373, 0.0745098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Edit_box" type="CanvasLayer"]
layer = 4
script = ExtResource("1_3u8od")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.298039)

[node name="Panel" type="Panel" parent="."]
clip_contents = true
offset_left = 22.0
offset_top = 134.0
offset_right = 461.0
offset_bottom = 687.0
theme_override_styles/panel = SubResource("StyleBoxFlat_al27v")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SUBJECT NAME"
horizontal_alignment = 1

[node name="Sub_name" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SUBJECT GRADE"
horizontal_alignment = 1

[node name="Sub_grade" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label3" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SUBJECT UNIT"
horizontal_alignment = 1

[node name="Sub_Unit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "COLOR MARK"
horizontal_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "              "
flat = true
edit_alpha = false

[node name="confirm" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 288.0
offset_top = 304.0
offset_right = 409.0
offset_bottom = 338.0
text = "CONFIRM"

[node name="cancel" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 153.0
offset_top = 305.0
offset_right = 274.0
offset_bottom = 339.0
text = "CANCEL"

[node name="delete" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 35.0
offset_top = 497.0
offset_right = 410.0
offset_bottom = 528.0
text = "DELETE"

[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/Sub_name" to="." method="_on_sub_name_text_changed"]
[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/Sub_grade" to="." method="_on_sub_grade_text_changed"]
[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/Sub_Unit" to="." method="_on_sub_unit_text_changed"]
[connection signal="pressed" from="Panel/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Panel/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Panel/delete" to="." method="_on_delete_pressed"]
